--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
         <div class="header">
             <div class="row space-between">
                 <div class="row logo">
-                    <div class="hexagon"></div>
-                    <h5 class="logo-h">H</h5>
-                    <h5 class="logo-text">the<span class="green">Ham</span></h5>
+                  <h2 class="symbol">H</h2>
+                  <h5 class="logo-text">the<span class="green">Ham</span></h5>
                 </div>
                 <nav class="navigation">
                     <a href="#" class="nav-link">Home</a>
@@ -47,25 +46,21 @@
 
     <section class="section-1">
         <div class="row">
-            <div class="tab-1">
-                <span class="tab-top-1"></span>
-                <div class="icon"><i class="fa fa-hand-o-up" aria-hidden="true"></i></div>
-                <h6 class="tab-h-1">Different theme option</h6>
+            <div class="tab col-g">
+                <i class="fa fa-hand-o-up fa-4x" aria-hidden="true"></i>
+                <h6 class="tab-h">Different theme option</h6>
             </div>
-            <div class="tab-2">
-                <span class="tab-top-2"></span>
-                <div class="icon-1"><i class="fa fa-diamond" aria-hidden="true"></i></div>
-                <h6 class="tab-h-2">fully customizable</h6>
+            <div class="tab col-w">
+                <i class="fa fa-diamond fa-4x" aria-hidden="true"></i>
+                <h6 class="tab-h">fully customizable</h6>
             </div>
-            <div class="tab-1">
-                <span class="tab-top-1"></span>
-                <div class="icon"><i class="fa fa-lightbulb-o" aria-hidden="true"></i></div>
-                <h6 class="tab-h-1">unlimited support</h6>
+            <div class="tab col-g">
+                <i class="fa fa-lightbulb-o fa-4x" aria-hidden="true"></i>
+                <h6 class="tab-h">unlimited support</h6>
             </div>
-            <div class="tab-2">
-                <span class="tab-top-2"></span>
-                <div class="icon-1"><i class="fa fa-desktop" aria-hidden="true"></i></div>
-                <h6 class="tab-h-2">responsive all device</h6>
+            <div class="tab col-w">
+                <i class="fa fa-desktop fa-4x" aria-hidden="true"></i>
+                <h6 class="tab-h">responsive all device</h6>
             </div>
         </div>
     </section>
@@ -195,7 +190,7 @@
                     <h6 class= "square-header">Creative design</h6>
                     <p class="square-text">Web Design</p>
                 </div>
-                
+
                 <div class="projects-item type1"><img src="graphic%20design/graphic-design1.jpg" alt = "graphic"></div>
                 <div class="projects-item type1"><img src="graphic%20design/graphic-design2.jpg" alt = "graphic"></div>
                 <div class="projects-item type1"><img src="graphic%20design/graphic-design3.jpg" alt = "graphic"></div>
